--- a/package.json
+++ b/package.json
@@ -15,15 +15,25 @@
     "@ag-grid-community/react": "^32.0.2",
     "@ag-grid-enterprise/core": "^32.0.2",
     "@ag-grid-enterprise/range-selection": "^32.0.2",
+    "@hebcal/core": "^5.4.11",
     "ag-grid-community": "^32.0.2",
     "ag-grid-react": "^32.0.2",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
+    "hebcal": "^2.3.2",
+    "jewish-dates-core": "^2.0.12",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-jewish-datepicker": "^2.0.12",
+    "react-modal": "^3.16.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.0",
     "react-table-column-resizer": "^1.2.3",
+    "react-toastify": "^10.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
