--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-multi-date-picker": "^4.5.2",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.0",
+    "react-spinners": "^0.14.1",
     "react-table-column-resizer": "^1.2.3",
     "react-toastify": "^10.0.5",
     "xlsx": "^0.18.5"
