--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "ag-grid-community": "^32.0.2",
     "ag-grid-react": "^32.0.2",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
     "gematriya": "^2.0.0",
     "hebcal": "^2.3.2",
     "jewish-dates-core": "^2.0.12",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
