--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.3",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.11.10",
     "gematriya": "^2.0.0",
     "hebcal": "^2.3.2",
     "jewish-dates-core": "^2.0.12",
