--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "framer-motion": "^11.11.10",
     "gematriya": "^2.0.0",
     "hebcal": "^2.3.2",
+    "hebrew-date": "^1.0.6",
     "jewish-dates-core": "^2.0.18",
+    "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
