--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hebcal": "^2.3.2",
     "hebrew-date": "^1.0.6",
     "jewish-dates-core": "^2.0.18",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
