--- a/package.json
+++ b/package.json
@@ -22,14 +22,21 @@
     "axios": "^1.7.3",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "fontkit": "^2.0.4",
     "framer-motion": "^11.11.10",
     "gematriya": "^2.0.0",
     "hebcal": "^2.3.2",
     "hebrew-date": "^1.0.6",
+    "html2pdf.js": "^0.10.2",
     "jewish-dates-core": "^2.0.18",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -42,6 +49,7 @@
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
     "react-table-column-resizer": "^1.2.3",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "xlsx": "^0.18.5"
